[package]
name = "lybookhtml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0", features = ["serde_yaml", "serde", "comrak"] }
clap = { version = "4.2.1", features = ["derive"]}
serde = { version = "1.0.159", features = ["derive"]}
serde_yaml = "0.9.21"
slugify = "0.1.0"
